fix(variables): fix wrong value (29px) to 28px on spacing-xlarge

--- a/packages/styles/global/variables.scss
+++ b/packages/styles/global/variables.scss
@@ -7,7 +7,7 @@
   --spacing-base: 16px;
   --spacing-medium: 20px;
   --spacing-large: 24px;
-  --spacing-xlarge: 29px;
+  --spacing-xlarge: 28px;
   --spacing-xxlarge: 32px;
   --spacing-xxxlarge: 40px;
   --spacing-xxxxlarge: 48px;
